<resources>
    <string name="app_name">GreenMind</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">홈</string>
    <string name="title_dashboard">진단</string>
    <string name="title_notifications">정보</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="gender_woman">여성</string>
    <string name="gender_man">남성</string>

    <string name="id">Id</string>
    <string name="pw">Password</string>
    <string name="signup">Sign Up</string>

    <string name="name">이름</string>
    <string name="age">나이</string>
    <string name="pwck">패스워드 확인</string>
    <string name="live">사는 곳 "예) 서울시 마포구"</string>

    <string name="signup_fin">회원가입이 완료되었습니다.\n\n화면 아무곳이나 터치하여 다시 로그인 해주세요!</string>
    <string name="btn_login">Sign In</string>
    <string name="btn_signup">가입완료</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">이곳은 홈</string>
    <string name="hello_blank_fragment2">이곳은 진단하는 곳</string>
    <string name="hello_blank_fragment3">정보창</string>

    <!--홈-->
    <string name="home_profile_title">My profile</string>
    <string name="home_profile_name">김덕성</string>
    <string name="home_profile_live">서울시 도봉구</string>
    <string name="home_logout">Logout</string>
    <string name="home_result_title">Result List</string>
    <string name="rv_result_date">2020/02/28</string>

</resources>
